# recycling-identifier

./: .gitignore  README.md  newforesttest.py  pyproject.toml  requirements.txt
ML/: global.py  train_test.py
ML/output/: data.h5  labels.h5
cli/paddy-recycling-identifier/: README.md  pyproject.toml
cli/paddy-recycling-identifier/paddy_recycling_identifier/: main.py
cli/paddy-recycling-identifier/tests/: test_paddy_recycling_identifier.py
