[tool.poetry]
name = "recycling-identifier"
version = "0.1.0"
description = ""
authors = ["Paddy Cooper <1210@rgsg.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
recycling-identifier = "paddy-recycling-identifier.main:app"


