[tool.poetry]
name = "paddy-recycling-identifier"
version = "0.1.0"
description = ""
authors = ["Paddy Cooper <1210@rgsg.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
recycle = "paddy_recycling_identifier.main"
